apollo-router/src/plugins/telemetry/metrics/apollo/snapshots/apollo_router__plugins__telemetry__metrics__apollo__test__apollo_metrics_single_operation.snap
---
source: apollo-router/src/plugins/telemetry/metrics/apollo/mod.rs
expression: results
snapshot_kind: text
---
[
  {
    "request_id": "[REDACTED]",
    "stats": {
      "# -\n{topProducts{name}}": {
        "stats_with_context": {
          "context": {
            "client_name": "test_client",
            "client_version": "1.0-test",
            "operation_type": "query",
            "operation_subtype": "",
            "result": "",
            "client_library_name": "",
            "client_library_version": ""
          },
          "query_latency_stats": {
            "latency": {
              "secs": 0,
              "nanos": 100000000
            },
            "cache_hit": false,
            "persisted_query_hit": null,
            "cache_latency": null,
            "root_error_stats": {
              "children": {},
              "errors_count": 0,
              "requests_with_errors_count": 0
            },
            "has_errors": true,
            "public_cache_ttl_latency": null,
            "private_cache_ttl_latency": null,
            "registered_operation": false,
            "forbidden_operation": false,
            "without_field_instrumentation": false
          },
          "limits_stats": {
            "strategy": null,
            "cost_estimated": null,
            "cost_actual": null,
            "depth": 2,
            "height": 2,
            "alias_count": 0,
            "root_field_count": 1
          },
          "per_type_stat": {},
          "extended_references": {
            "referenced_input_fields": {},
            "referenced_enums": {}
          },
          "enum_response_references": {},
          "local_per_type_stat": {}
        },
        "referenced_fields_by_type": {
          "Product": {
            "field_names": [
              "name"
            ],
            "is_interface": false
          },
          "Query": {
            "field_names": [
              "topProducts"
            ],
            "is_interface": false
          }
        }
      }
    },
    "licensed_operation_count_by_type": {
      "type": "query",
      "subtype": null,
      "licensed_operation_count": 1
    }
  }
]
